--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -9,7 +9,7 @@ from pathlib import Path
 from re import finditer
 from shlex import split
 from subprocess import run
-from sys import executable, stdout
+from sys import executable
 
 from cyclopts import App
 
@@ -43,7 +43,7 @@ def log(obj):
             if len(obj):
                 print(*obj, sep="\n")  # noqa: T201
         case _:
-            print(obj, file=stdout)  # noqa: T201
+            print(obj)  # noqa: T201
     return obj
 
 
@@ -93,10 +93,12 @@ def compile(high: bool = False) -> Path:  # noqa: A001
         high: Highest dependencies.
     """
     sep = " "
+    # ? Define `uv` in one place so we can exclude it from its own compilation
+    uv = "uv"
     result = run(
         args=split(
             sep.join([
-                f"{Path(executable).as_posix()} -m uv",
+                f"{Path(executable).as_posix()} -m {uv}",
                 f"pip compile --python-version {VERSION}",
                 f"--resolution {'highest' if high else 'lowest-direct'}",
                 f"--exclude-newer {datetime.now(UTC).isoformat().replace('+00:00', 'Z')}",
@@ -110,21 +112,17 @@ def compile(high: bool = False) -> Path:  # noqa: A001
     )
     if result.returncode:
         raise RuntimeError(result.stderr)
+    deps = [line.strip() for line in result.stdout.splitlines()]
+    commented_uv_dep = f"# {next(dep for dep in deps if dep.startswith(uv))}"
+    other_deps = [dep for dep in deps if not dep.startswith(uv)]
+    nodeps_deps = [
+        line.strip()
+        for line in NODEPS.read_text("utf-8").splitlines()
+        if not line.strip().startswith("#")
+    ]
+    all_deps = "\n".join([commented_uv_dep, *other_deps, *nodeps_deps]) + "\n"
     comp = get_comp_path(high)
-    comp.write_text(
-        encoding="utf-8",
-        data=(
-            "\n".join([
-                *[r.strip() for r in [result.stdout]],
-                *[
-                    line.strip()
-                    for line in NODEPS.read_text("utf-8").splitlines()
-                    if not line.strip().startswith("#")
-                ],
-            ])
-            + "\n"
-        ),
-    )
+    comp.write_text(encoding="utf-8", data=all_deps)
     return log(comp)
 
 
