Propagate changes from boilercv

--- a/template/.github/workflows/changerelease.yml.jinja
+++ b/template/.github/workflows/changerelease.yml.jinja
@@ -6,6 +6,9 @@ on:
     branches: ["main"]
     tags: ["*"]
     paths: ["CHANGELOG.md"]
+defaults:
+  run:
+    shell: "pwsh"
 jobs:
   changerelease:
     permissions:
