--- a/template/.github/workflows/contrib.yml.jinja
+++ b/template/.github/workflows/contrib.yml.jinja
@@ -15,12 +15,16 @@ on:
       - "scripts/Sync-Py.ps1"
       - "scripts/{{ project_name }}_tools/**"
       - "scripts/pyproject.toml"
+defaults:
+  run:
+    shell: "pwsh"
 jobs:
   contrib:
     strategy:
       matrix:
         runner:
           - "macos-13"
+          - "macos-14"
           - "ubuntu-22.04"
           - "windows-2022"
     env:
@@ -32,18 +36,14 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: |
-            3.11
-            3.12
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.12'"
+          python-version: "{{ python_version }}"
+      - run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
   ci:
     strategy:
       matrix:
         runner:
           - "macos-13"
+          - "macos-14"
           - "ubuntu-22.04"
           - "windows-2022"
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
@@ -53,10 +53,23 @@ jobs:
           submodules: True
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: |
-            3.11
-            3.12
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.11'"
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '3.12'"
+          python-version: "{{ python_version }}"
+      - run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
+  spaces:
+    strategy:
+      matrix:
+        runner:
+          - "macos-13"
+          - "macos-14"
+          - "windows-2022"
+    runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    steps:
+      - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
+        with:
+          submodules: True
+          path: "repo path with spaces"
+      - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
+        with:
+          python-version: "{{ python_version }}"
+      - working-directory: "repo path with spaces"
+        run: "scripts/Sync-Py.ps1 -Compile -Lock -Version '{{ python_version }}'"
