--- a/template/.github/workflows/docs.yml.jinja
+++ b/template/.github/workflows/docs.yml.jinja
@@ -32,6 +32,9 @@ on:
       - "scripts/{{ project_name }}_tools/**"
       - "submodules/**"
       - "params.yaml"
+defaults:
+  run:
+    shell: "pwsh"
 jobs:
   build:
     runs-on: "{{ actions_runner }}"
@@ -42,8 +45,7 @@ jobs:
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
           python-version: "{{ python_version }}"
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -Compile"
+      - run: "scripts/Sync-Py.ps1 -Compile"
       - run: "sphinx-build -EaT docs _site"
       - uses: "actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa" # v3.0.1
   deploy:
