--- a/template/.github/workflows/high.yml.jinja
+++ b/template/.github/workflows/high.yml.jinja
@@ -4,19 +4,22 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "38 16 * * 4"
+defaults:
+  run:
+    shell: "pwsh"
 jobs:
   test:
     strategy:
       matrix:
         runner:
           - "macos-13"
-          # - "macos-14" # ? PyTables doesn't support macos-14
+          - "macos-14"
           - "ubuntu-22.04"
           - "windows-2022"
         python:
-          # - "3.10" # ? Using some 3.11 features (e.g. datetime.UTC)
+          - "3.10"
           - "3.11"
-          # - "3.12" # ? No support in my commit-pinned fork of cachier
+          - "3.12"
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - if: startsWith(matrix.runner, 'ubuntu')
@@ -29,6 +32,5 @@ jobs:
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - shell: "pwsh"
-        run: "scripts/Sync-Py.ps1 -High -Version '{% raw %}${{ matrix.python }}{% endraw %}'"
+      - run: "scripts/Sync-Py.ps1 -High -Version '{% raw %}${{ matrix.python }}{% endraw %}'"
       - run: "pytest"
