--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -133,7 +133,8 @@ jobs:
         run: "scripts/Sync-Py.ps1"
       - uses: "stefanzweifel/git-auto-commit-action@8756aa072ef5b4a080af5dc8fef36c5d586e521d" # v5.0.0
         with:
-          commit_message: "Lock"
+          commit_message: "{% raw %}${{ github.actor == 'renovate[bot]' && 'Lock' || 'Sync project with template' }}{% endraw %}"
+
   lock:
     if: github.event_name != 'pull_request'
     permissions:
