--- a/template/.renovaterc.json.jinja
+++ b/template/.renovaterc.json.jinja
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Establish base config, schedule, and manager defaults",
+  "addLabels": ["deps"],
   "extends": ["config:base", ":enablePreCommit", ":disableRateLimiting"],
   "dependencyDashboardApproval": {% if active %}false{% else %}true{% endif %},
   "schedule": ["on the 16th day of the month"],
