--- a/template/scripts/Sync-Py.ps1.jinja
+++ b/template/scripts/Sync-Py.ps1.jinja
@@ -77,8 +77,8 @@ if ($Env:CI) {
 # ? Compile or retrieve compiled dependencies
 if ($Compile) {
     'COMPILING' | Write-Progress
-    $comp_low = boilercv_tools compile
-    $comp_high = boilercv_tools compile --high
+    $comp_low = {{ project_name }}_tools compile
+    $comp_high = {{ project_name }}_tools compile --high
     $comp = $High ? $comp_high : $comp_low
     'COMPILED' | Write-Progress -Done
 }
