--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -78,7 +78,7 @@ jobs:
         python:
           - "3.11"
           - "3.12"
-          - "3.13"
+          - "3.13.0-alpha.5"
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
