--- a/template/.github/workflows/lock.yml.jinja
+++ b/template/.github/workflows/lock.yml.jinja
@@ -18,9 +18,10 @@ jobs:
           - "ubuntu-22.04"
           - "windows-2022"
         python:
+          # - "3.10"  # `scripts` currently requires `tomllib`, which is > 3.10
           - "3.11"
           - "3.12"
-          - "3.13.0-alpha.5"
+          # - "3.13.0-alpha.5"  # `copier` tooling dep failing on 3.13
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
