--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -79,7 +79,7 @@ jobs:
           # - "3.10"  # `scripts` currently requires `tomllib`, which is > 3.10
           - "3.11"
           - "3.12"
-          # - "3.13.0-alpha.5"  # `copier` tooling dep failing on 3.13
+          # - "3.13.0-alpha.5"  # https://github.com/PyO3/pyo3/issues/3555
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
