--- a/template/scripts/Sync-Py.ps1.jinja
+++ b/template/scripts/Sync-Py.ps1.jinja
@@ -5,8 +5,6 @@ Param(
     [string]$Version,
     # Sync to highest dependencies.
     [switch]$High,
-    # Recompile dependencies.
-    [switch]$Compile,
     # Add all local dependency compilations to the lock.
     [switch]$Lock,
     # Don't run pre-sync actions.
@@ -74,19 +72,11 @@ if ($Env:CI) {
     'PROJECT SYNCED WITH TEMPLATE' | Write-Progress
 }
 
-# ? Compile or retrieve compiled dependencies
-if ($Compile) {
-    'COMPILING' | Write-Progress
-    $comp_low = {{ project_name }}_tools compile
-    $comp_high = {{ project_name }}_tools compile --high
-    $comp = $High ? $comp_high : $comp_low
-    'COMPILED' | Write-Progress -Done
-}
-else {
-    'GETTING COMPILATION FROM LOCK, COMPILING IF MISSING' | Write-Progress
-    $comp = {{ project_name }}_tools get-comp --high=$High
-    'COMPILATION FOUND OR COMPILED' | Write-Progress -Done
-}
+# ? Compile
+'COMPILING' | Write-Progress
+$Comps = {{ project_name }}_tools compile
+$Comp = $High ? $Comps[1] : $Comps[0]
+'COMPILED' | Write-Progress -Done
 
 # ? Lock
 if ($Lock) {
@@ -97,8 +87,8 @@ if ($Lock) {
 
 # ? Sync
 'SYNCING DEPENDENCIES' | Write-Progress
-if ($Env:CI) { uv pip sync --system --break-system-packages $comp }
-else { uv pip sync $comp }
+if ($Env:CI) { uv pip sync --system --break-system-packages $Comp }
+else { uv pip sync $Comp }
 'DEPENDENCIES SYNCED' | Write-Progress -Done
 
 # ? Post-sync
