--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: "{{ python_version }}"
       - run: "scripts/Sync-Py.ps1"
-      - run: "ruff --no-fix --output-format github ."
+      - run: "ruff check --no-fix --output-format github ."
   fawltydeps:
     runs-on: "{{ actions_runner }}"
     steps:
