--- a/template/CHANGELOG.md.jinja
+++ b/template/CHANGELOG.md.jinja
@@ -2,16 +2,13 @@
 
 All notable changes to this project will be documented in this file.
 
-The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
-and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
+The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/) and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
 
-- Nothing yet
-
 ## [0.0.0]
 
-- No features yet
+- Nothing yet
 
 [Unreleased]: https://github.com/{{ project_owner_github_username }}/{{ project_name }}/compare/0.0.0...HEAD
 [0.0.0]: https://github.com/{{ project_owner_github_username }}/{{ project_name }}/releases/tag/0.0.0
